# hp41-calculator-emulator

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  PRD.md  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  (+2 more)
hp41-cli/: Cargo.toml
hp41-cli/src/: app.rs  cards.rs  help_data.rs  keys.rs  lib.rs  main.rs  persistence.rs  prgm_display.rs  programs.rs  ui.rs
hp41-cli/src/tests/: keys_tests.rs  mod.rs  prgm_display_tests.rs
hp41-cli/tests/: card_io_tests.rs  function_matrix_parity.rs  key_coverage.rs  phase25_help_data.rs  phase25_keyboard.rs  phase25_pending_input.rs  phase25_xeq_by_name.rs  phase29_help_data_math1.rs  phase29_key_ref_includes_math1.rs  phase29_modal_flow.rs  phase29_pending_prompt_modal.rs
hp41-core/: Cargo.toml
hp41-core/benches/: dispatch_bench.rs
hp41-core/src/: error.rs  format.rs  lib.rs  num.rs  stack.rs  state.rs  tests.rs
hp41-core/src/cardreader/: data.rs  mod.rs  raw.rs
hp41-core/src/ops/: alpha.rs  arithmetic.rs  cardreader_ops.rs  display_ops.rs  flags.rs  hms.rs  indirect.rs  math.rs  mod.rs  print.rs  program.rs  registers.rs  sound.rs  stack_ops.rs  stats.rs
hp41-core/src/ops/math1/: complex.rs  difeq.rs  four.rs  hyperbolics.rs  integ.rs  matrix.rs  mod.rs  modal.rs  poly.rs  solve.rs  trans.rs  tri.rs  xrom.rs
hp41-core/tests/: alpha_tests.rs  cancel_flag_reset_on_open.rs  cardreader_tests.rs  cardreader_xeq_tests.rs  entry_buf_tests.rs  format_eng_edges.rs  format_tests.rs  hms_tests.rs  indirect_addressing.rs  lift_tests.rs  lint_math1_assertions.rs  math1_complex.rs  math1_complex_edge_cases.rs  math1_complex_functions.rs  math1_difeq.rs  math1_difeq_error_branches.rs  math1_four_error_branches.rs  math1_four_tri_trans.rs  math1_hyperbolics.rs  math1_integ.rs  math1_integ_error_branches.rs  math1_matrix.rs  math1_matrix_error_branches.rs  math1_matrix_flow.rs  math1_mod_entry_points.rs  math1_mod_extra_coverage.rs  math1_op_test_count.rs  math1_poly.rs  math1_poly_error_branches.rs  math1_solve.rs  math1_solve_error_branches.rs  math1_solve_paths.rs  math1_trans_error_branches.rs  math1_user_callback.rs  math_tests.rs  numerical_accuracy.rs  op_catalog_xrom.rs  phase20_math.rs  phase21_display.rs  phase21_flags.rs  (+30 more)
hp41-core/tests/fixtures/: v20-autosave.json
hp41-gui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
hp41-gui/src-tauri/capabilities/: default.json
hp41-gui/src-tauri/icons/: icon.icns
hp41-gui/src-tauri/permissions/: bst-step.toml  cancel-modal.toml  dispatch-op.toml  get-state.toml  request-cancel.toml  run-stop.toml  sst-step.toml  submit-modal-with-label.toml  submit-modal.toml
hp41-gui/src-tauri/src/: cards.rs  commands.rs  key_map.rs  lib.rs  main.rs  persistence.rs  prgm_display.rs  types.rs
hp41-gui/src-tauri/tests/: cancel_autosave_stress.rs  cancel_command_no_deadlock.rs  card_io_tests.rs  d25_6_parity.rs  key_map_stub_error_arms.rs  lcd_alternation_modal_prompt.rs  prgm_display_math1_arms.rs  sc4_invariant.rs
scripts/docs-matrix/: Cargo.toml
scripts/docs-matrix/src/: main.rs
(+548 files in other folders)
