[package]
name = "hp41-cli"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[[bin]]
name = "hp41"
path = "src/main.rs"

[dependencies]
hp41-core = { path = "../hp41-core" }
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "6"

[dev-dependencies]
tempfile = "3"
