[workspace]
resolver = "2"

[package]
name = "hp41-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[[bin]]
name = "hp41-gui"
path = "src/main.rs"

[lib]
name = "hp41_gui_lib"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2.11", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hp41-core = { path = "../../hp41-core" }
dirs = "6"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }
